# DevOps

./: .dockerignore  .gitignore  Dockerfile  coverage.info  coverage_filtered.info  instructions.txt
.github/workflows/: bmc_ci.yml
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/include/gtest/: gtest-matchers.h.func-sort-c.html  gtest-matchers.h.func.html  gtest-matchers.h.gcov.html  gtest.h.func.html  (+14 more)
coverage_report/rclcpp/: any_subscription_callback.hpp.func-sort-c.html  any_subscription_callback.hpp.func.html  any_subscription_callback.hpp.gcov.html  context.hpp.func-sort-c.html  context.hpp.func.html  context.hpp.gcov.html  create_publisher.hpp.func-sort-c.html  create_publisher.hpp.func.html  create_publisher.hpp.gcov.html  create_subscription.hpp.func-sort-c.html  create_subscription.hpp.func.html  create_subscription.hpp.gcov.html  create_timer.hpp.func-sort-c.html  create_timer.hpp.func.html  create_timer.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  logger.hpp.func-sort-c.html  logger.hpp.func.html  logger.hpp.gcov.html  message_memory_strategy.hpp.func-sort-c.html  message_memory_strategy.hpp.func.html  message_memory_strategy.hpp.gcov.html  node_impl.hpp.func-sort-c.html  node_impl.hpp.func.html  node_impl.hpp.gcov.html  node_options.hpp.func-sort-c.html  node_options.hpp.func.html  node_options.hpp.gcov.html  publisher.hpp.func-sort-c.html  publisher.hpp.func.html  publisher.hpp.gcov.html  publisher_base.hpp.func-sort-c.html  publisher_base.hpp.func.html  publisher_base.hpp.gcov.html  publisher_factory.hpp.func-sort-c.html  publisher_factory.hpp.func.html  publisher_factory.hpp.gcov.html  publisher_options.hpp.func-sort-c.html  (+26 more)
coverage_report/src/: gtest-death-test.cc.func-sort-c.html  gtest-death-test.cc.func.html  gtest-death-test.cc.gcov.html  gtest-filepath.cc.func-sort-c.html  gtest-filepath.cc.func.html  gtest-filepath.cc.gcov.html  gtest-internal-inl.h.func-sort-c.html  gtest-internal-inl.h.func.html  gtest-internal-inl.h.gcov.html  gtest-matchers.cc.func-sort-c.html  gtest-matchers.cc.func.html  gtest-matchers.cc.gcov.html  gtest-port.cc.func-sort-c.html  gtest-port.cc.func.html  gtest-port.cc.gcov.html  gtest-printers.cc.func-sort-c.html  gtest-printers.cc.func.html  gtest-printers.cc.gcov.html  gtest-test-part.cc.func-sort-c.html  gtest-test-part.cc.func.html  gtest-test-part.cc.gcov.html  gtest-typed-test.cc.func-sort-c.html  gtest-typed-test.cc.func.html  gtest-typed-test.cc.gcov.html  gtest.cc.func-sort-c.html  gtest.cc.func.html  gtest.cc.gcov.html  gtest_main.cc.func-sort-c.html  gtest_main.cc.func.html  gtest_main.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/tracetools/: index-sort-f.html  index-sort-l.html  index.html  utils.hpp.func-sort-c.html  utils.hpp.func.html  utils.hpp.gcov.html
install/: local_setup.sh  setup.sh
log/: latest_build  latest_test  latest_test-result
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: subscriber_member_function.cpp
src/cpp_pubsub/test/: test_my_node.cpp  test_pubsub_integration.py
test_results/: test_my_node.xml
(+197 files in other folders)
